--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-Flask==3.0.0
+Flask==3.0.2
+Flask-SQLAlchemy==3.1.1
+pandas==2.2.1
+numpy==1.26.4
+scikit-learn==1.4.1
+matplotlib==3.8.3
+seaborn==0.13.2
 Werkzeug==3.0.1
-streamlit>=1.33.0
-pandas>=2.0.0
-numpy>=1.24.0
-pillow>=10.0.0
-requests>=2.31.0 
+python-dateutil==2.8.2
+openpyxl==3.1.2
+gunicorn==21.2.0 
