--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-Flask==3.0.2
+Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
-pandas==2.2.1
-numpy==1.26.4
-scikit-learn==1.4.1
-matplotlib==3.8.3
-seaborn==0.13.2
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
+matplotlib==3.8.2
+seaborn==0.13.0
 Werkzeug==3.0.1
 python-dateutil==2.8.2
 openpyxl==3.1.2
-gunicorn==21.2.0 
+python-dotenv==1.0.0
+gunicorn==21.2.0
+plotly==5.18.0
+dash==2.14.1
+dash-bootstrap-components==1.5.0 
