--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,11 @@ python-dotenv==1.0.0
 gunicorn==21.2.0
 plotly==5.18.0
 dash==2.14.1
-dash-bootstrap-components==1.5.0 
+dash-bootstrap-components==1.5.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+click==8.1.7
+joblib==1.3.2
+threadpoolctl==3.2.0
+scipy==1.11.4 
